--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
         type="text"
         id="bucket-name"
         placeholder="Bucket Name"
-        value="test_bucket"
+        value="test-bucket"
       />
       <button onclick="createBucket()">Create Bucket</button>
       <button onclick="deleteBucket()">Delete Bucket</button>
@@ -151,14 +151,16 @@
             },
             body: file,
           });
-
           if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
+            const text = await response.text();
+            alert(`HTTP error! status: ${response.status} - ${text}`);
+            return;
           }
           alert("Object uploaded successfully");
+
+          z;
         } catch (error) {
           console.error("Error uploading object:", error);
-          alert(`Error: ${error.message}`);
         }
       }
 
